# xarray_mongodb

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: docs.yml  lint.yml  pytest.yml
ci/: .coveragerc  install_mongodb.ps1  install_python.ps1  mongo_smoke_test.py  requirements-conda-forge.yml  requirements-docs.yml  requirements-git-tip.yml  requirements-latest.yml  requirements-lint.yml  requirements-min-all-deps.yml  requirements-min-no-optionals.yml  requirements-minimal.yml  requirements-no-motor.yml  requirements-no-optional-deps.yml  requirements-py35.yml  requirements-py36-bare-minimum.yml  requirements-py36-min-all-deps.yml  requirements-py36-min-nep18.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37-bare-minimum.yml  requirements-py37-min-all-deps.yml  requirements-py37-min-nep18.yml  requirements-py37.yml  requirements-py38.yml  requirements-py39.yml  requirements-upstream.yml  requirements-windows.yml
ci/recipe/: meta.yaml
doc/: Makefile  api.rst  api_reference.rst  conf.py  db_reference.rst  index.rst  installing.rst  nep18.rst  whats-new.rst
doc/api/: helloworld.rst
xarray_mongodb/: __init__.py  asyncio.py  chunk.py  common.py  compat.py  errors.py  nep18.py  patch_pymongo.py  sync.py
xarray_mongodb/tests/: __init__.py  conftest.py  data.py  fixtures.py  load_pickle.py  test_asyncio.py  test_pickle.py  test_pint.py  test_sync.py
