[project]
name = "xarray_mongodb"
authors = [{name = "Guido Imperiale", email = "crusaderky@gmail.com"}]
license = {text = "Apache"}
description = "Store xarray objects on MongoDB"
keywords = ["mongodb", "xarray", "dask", "distributed", "pint", "sparse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.19",
    "pandas >= 1.1",
    "dask >= 2.24",
    "xarray >= 0.16",
    "pymongo >= 3.11",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/crusaderky/xarray_mongodb"
"Bug Tracker" = "https://github.com/crusaderky/xarray_mongodb/issues"
Changelog = "https://xarray-mongodb.readthedocs.io/en/latest/whats-new.html"

[project.readme]
text = "Store xarray objects on MongoDB"
content-type = "text/x-rst"

[project.optional-dependencies]
asyncio = ["motor >= 2.3"]
pint = ["pint >= 0.18"]
sparse = ["sparse >= 0.9"]
testing = ["pytest", "pytest-asyncio"]
complete = [
    "motor >= 2.3",
    "pint >= 0.18",
    "sparse >= 0.9",
]

[tool.setuptools]
packages = ["xarray_mongodb"]
zip-safe = false # https://mypy.readthedocs.io/en/latest/installed_packages.html
include-package-data = true

[tool.setuptools_scm]
# Use hardcoded version when .git has been removed and this is not a package created
# by sdist. This is the case e.g. of a remote deployment with PyCharm.
fallback_version = "9999"

[tool.setuptools.package-data]
xarray_mongodb = ["py.typed"]

[build-system]
requires = [
    "setuptools>=66",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -v -r sxfE --color=yes"
xfail_strict = true
python_files = ["test_*.py"]
testpaths = ["xarray_mongodb/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # FIXME
    'ignore::pytest.PytestUnraisableExceptionWarning',
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: nocover",
    "pragma: no cover",
    "TYPE_CHECKING",
    "except ImportError",
    "@overload",
    '@(abc\.)?abstractmethod',
]

[tool.ruff]
exclude = [".eggs"]
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "EM101",    # Exception must not use a string literal, assign to variable first
  "EM102",    # Exception must not use an f-string literal, assign to variable first
  "N802",     # Function name should be lowercase
  "N803",     # Argument name should be lowercase
  "N806",     # Variable should be lowercase
  "N816",     # Variable in global scope should not be mixedCase
  "PD901",    # Avoid using the generic variable name `df` for DataFrames
  "PT006",    # Wrong type passed to first argument of `pytest.mark.parametrize`; expected `tuple`
  "PLC0414",  # Import alias does not rename original package
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments in function definition
  "PLR2004",  # Magic value used in comparison, consider replacing `123` with a constant variable
  "PLW2901",  # for loop variable overwritten by assignment target
  "SIM108",   # Use ternary operator instead of if-else block
  "N999",     # Invalid module name: 'TEMPLATE'  TODO remove this line
]
select = [
  "YTT",  # flake8-2020
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EM",   # flake8-errmsg
  "EXE",  # flake8-executable
  "ICN",  # flake8-import-conventions
  "G",    # flake8-logging-format
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "ARG",  # flake8-unused-arguments
  "I",    # isort
  "NPY",  # NumPy specific rules
  "N",    # pep8-naming
  "E",    # Pycodestyle
  "W",    # Pycodestyle
  "PGH",  # pygrep-hooks
  "F",    # Pyflakes
  "PD",   # pandas-vet
  "PL",   # pylint
  "UP",   # pyupgrade
  "RUF",  # unused-noqa
  "EXE001",  #  Shebang is present but file is not executable
]

[tool.ruff.lint.isort]
known-first-party = ["xarray_mongodb"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["xarray_mongodb.patch_pymongo"]
disallow_untyped_defs = false
