[metadata]
name = xarray_mongodb
author = Amphora, Inc.
author_email = support@amphorainc.com
license = Apache
description = Store xarray objects on MongoDB
long_description = Store xarray objects on MongoDB
keywords = mongodb, xarray, dask, distributed, pint, sparse
url = https://github.com/AmphoraInc/xarray_mongodb
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = xarray_mongodb
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy >= 1.15
    pandas >= 0.24
    dask[delayed] >= 1.2
    xarray >= 0.13
    pymongo >= 3.7
setup_requires =
    setuptools
    setuptools_scm
tests_require =
    pytest
    pytest-asyncio

[options.extras_require]
asyncio =
    motor >= 2.0
    motor >= 2.1;sys_platform == "win32"
    motor >= 2.1;python_version >= "3.8"
pint =
    pint >= 0.10
    numpy >= 1.17
sparse =
    sparse >= 0.9
    numpy >= 1.17

[options.package_data]
xarray_mongodb = py.typed

[check-manifest]
ignore =
    .travis.yml

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
# Adding --cov to setup.cfg breaks PyCharm debugger; see
# https://stackoverflow.com/questions/40718760/unable-to-debug-in-pycharm-with-pytest
# --cov is added directly in the CI scripts
addopts = --strict-markers -vv
python_files = test_*.py
testpaths = xarray_mongodb/tests

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude=
  .eggs/
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = xarray_mongodb
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

# mypy: Ignore non-typed libraries
[mypy-setuptools]
ignore_missing_imports = True
[mypy-bson]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-motor.*]
ignore_missing_imports = True
[mypy-numpy]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-pymongo.*]
ignore_missing_imports = True
[mypy-sparse.*]
ignore_missing_imports = True
